--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -8,12 +8,20 @@
   top: 0;
   width: 100%;
   background: #000;
+  z-index: 333;
 
   .logo {
-    width: 20%;
+    width: fit-content;
     text-align: center;
     border-right: 1px solid var(--bg-dark-border);
     font-size: 22px;
+    transition: all 0.3s ease;
+    font-weight: bold;
+    &:hover {
+      transform: scale(1.2) rotate(2deg);
+      text-shadow: 0px 3px 10px #c02828;
+      cursor: pointer;
+    }
 
     .icon {
       vertical-align: -6px;
@@ -24,7 +32,7 @@
   }
 
   .search {
-    width: 80%;
+    width: 78%;
     padding: 10px 30px;
     position: relative;
     .glass {
