--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -11,21 +11,28 @@
     button {
       display: block;
       font-size: 20px;
-      margin-bottom: 15px;
+      margin-bottom: 23px;
       text-align: left;
       width: 100%;
       position: relative;
+      border-radius: 10px;
+      transition: all 0.3s;
       &:first-child {
         display: inline-block;
         margin-right: 10px;
       }
       &:hover {
-        background: rgb(164, 33, 33);
-        border-radius: 30px;
+        background: rgb(164, 33, 33) !important;
+        cursor: pointer;
       }
       span {
         &:first-child {
           margin-top: 2px;
+          margin-right: 10px;
+          padding-left: 5px;
+          > svg {
+            padding-top: 5px;
+          }
         }
       }
     }
@@ -53,8 +60,50 @@
 
   > div {
     width: 24%;
-    margin-bottom: 1%;
-    height: 400px;
-    background: rgb(141, 74, 74);
+    margin-bottom: 50px;
+    height: 230px;
+    display: flex;
+    flex-wrap: wrap;
+    &:hover a img {
+      filter: brightness(110%);
+      transform: scale(1.2);
+    }
+    > a {
+      display: block;
+      border-radius: 10px;
+      overflow: hidden;
+      width: 100%;
+      height: 70%;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border: 1px solid #333;
+        transition: all 0.3s ease;
+      }
+    }
+    .boxInfo {
+      margin-top: 10px;
+      height: 30%;
+      > a:first-child {
+        display: block;
+        width: 100%;
+        height: 70%;
+        > span {
+          overflow: hidden;
+          text-overflow: ellipsis;
+          display: -webkit-box;
+          -webkit-line-clamp: 2;
+          -webkit-box-orient: vertical;
+        }
+      }
+      > a:last-child {
+        height: 30%;
+        > span {
+          font-size: 13px;
+          opacity: 0.7;
+        }
+      }
+    }
   }
 }
