--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -10,13 +10,16 @@
 
     button {
       display: block;
-      font-size: 20px;
-      margin-bottom: 23px;
+      margin-bottom: 15px;
       text-align: left;
       width: 100%;
       position: relative;
+      padding: 5px;
+      padding-top: 7px;
       border-radius: 10px;
       transition: all 0.3s;
+      color: #999;
+
       &:first-child {
         display: inline-block;
         margin-right: 10px;
@@ -24,6 +27,7 @@
       &:hover {
         background: rgb(164, 33, 33) !important;
         cursor: pointer;
+        color: snow !important;
       }
       span {
         &:first-child {
@@ -31,7 +35,7 @@
           margin-right: 10px;
           padding-left: 5px;
           > svg {
-            padding-top: 5px;
+            padding-top: 2px;
           }
         }
       }
@@ -42,7 +46,6 @@
     padding: 30px;
 
     h2 {
-      padding: 5px 20px;
       padding-left: 0;
       margin-bottom: 5px;
       em {
@@ -66,7 +69,7 @@
     flex-wrap: wrap;
     &:hover a img {
       filter: brightness(110%);
-      transform: scale(1.2);
+      transform: scale(1.1);
     }
     > a {
       display: block;
@@ -88,8 +91,9 @@
       > a:first-child {
         display: block;
         width: 100%;
-        height: 70%;
+        height: 82%;
         > span {
+          line-height: 1.6;
           overflow: hidden;
           text-overflow: ellipsis;
           display: -webkit-box;
@@ -98,9 +102,13 @@
         }
       }
       > a:last-child {
-        height: 30%;
+        height: 25%;
+        &:hover > span {
+          opacity: 1;
+          transition: opacity 0.3s ease;
+        }
         > span {
-          font-size: 13px;
+          font-size: 12px;
           opacity: 0.7;
         }
       }
