--- a/src/styles/_videoView.scss
+++ b/src/styles/_videoView.scss
@@ -4,7 +4,7 @@
   justify-content: space-between;
   box-sizing: border-box;
   padding: 30px;
-  margin-top: 70px;
+  margin-top: 55px;
   .left {
     width: 70%;
     .video {
@@ -22,14 +22,108 @@
       }
     }
     .desc {
-      margin-top: 30px;
+      display: flex;
+      flex-wrap: wrap;
+      margin-top: 20px;
       width: 100%;
-      height: 100px;
-      background: #f5f5f5;
+      //   height: 100px;
+      //   background: #f5f5f5;
+      > .title {
+        width: 100%;
+        margin-bottom: 15px;
+      }
+      > .channel {
+        font-size: 12px;
+        opacity: 0.7;
+        width: 70%;
+      }
+      > .count {
+        width: 30%;
+        text-align: right;
+        padding-right: 5px;
+        > .Like {
+          margin-left: 20px;
+        }
+      }
+      > .tag {
+        font-size: 13px;
+        margin-top: 15px;
+        width: fit-content;
+        color: #8592ff;
+        margin-bottom: 10px;
+        > span {
+          padding: 0 10px;
+          &:nth-of-type(1) {
+            padding-left: 0;
+          }
+        }
+      }
     }
   }
   .right {
-    width: 25%;
-    background: #333;
+    width: 27%;
+    // padding-top: 5px;
+    // background: #333;
+  }
+  .Viewside {
+    .videos__inner {
+      display: block;
+      .box {
+        width: 100%;
+        height: auto;
+        min-height: 90px;
+        margin-bottom: 17px;
+        justify-content: space-between;
+        > a {
+          display: block;
+          width: 48%;
+          height: 100%;
+          background: #fff;
+          border-radius: 15px;
+        }
+        > .boxInfo {
+          width: 47%;
+          > a {
+            &:last-child {
+              width: 100%;
+              margin-top: 2%;
+              display: block;
+              text-align: right;
+              padding-right: 10px;
+            }
+          }
+        }
+        &:hover {
+          box-shadow: inset 0px 0px 10px 0px #f5f5f5;
+          border-radius: 10px;
+          padding: 5px;
+          transition: all 0.3s ease;
+        }
+      }
+    }
+  }
+}
+@media (max-width: 1300px) {
+  .Viewside {
+    .videos__inner {
+      .box {
+        > a {
+          width: 100% !important;
+        }
+        > .boxInfo {
+          width: 100% !important;
+        }
+      }
+    }
+  }
+}
+@media (max-width: 768px) {
+  .videos__inner > div {
+    width: 98% !important;
+    margin: 0 auto !important;
+    height: 400px;
+  }
+  .videos__inner > div .boxInfo > a:first-child {
+    height: 50%;
   }
 }
