--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -4,6 +4,8 @@
 @import './main.scss';
 @import './videoView.scss';
 @import './channel.scss';
+@import './search.scss';
+@import './Loader.scss';
 
 :root {
   --white: #fff;
