--- a/src/styles/_videoView.scss
+++ b/src/styles/_videoView.scss
@@ -62,8 +62,27 @@
   }
   .right {
     width: 27%;
+    height: calc(100vh - 120px);
     // padding-top: 5px;
     // background: #333;
+    overflow-y: auto;
+
+    &::-webkit-scrollbar {
+      width: 10px;
+    }
+    &::-webkit-scrollbar-thumb {
+      background-color: #2f3542;
+      border-radius: 10px;
+      &:hover {
+        background-color: #4b5463;
+      }
+    }
+
+    &::-webkit-scrollbar-track {
+      background-color: rgba(128, 128, 128, 0);
+      border-radius: 10px;
+      box-shadow: inset 0px 0px 5px rgba(255, 255, 255, 0.15);
+    }
   }
   .Viewside {
     .videos__inner {
@@ -94,7 +113,7 @@
           }
         }
         &:hover {
-          box-shadow: inset 0px 0px 10px 0px #f5f5f5;
+          box-shadow: inset 0px 0px 3px 0px #f5f5f5;
           border-radius: 10px;
           padding: 5px;
           transition: all 0.3s ease;
@@ -103,6 +122,7 @@
     }
   }
 }
+
 @media (max-width: 1300px) {
   .Viewside {
     .videos__inner {
@@ -117,13 +137,173 @@
     }
   }
 }
-@media (max-width: 768px) {
-  .videos__inner > div {
-    width: 98% !important;
-    margin: 0 auto !important;
-    height: 400px;
-  }
-  .videos__inner > div .boxInfo > a:first-child {
-    height: 50%;
+@media (max-width: 1050px) {
+  .video__inner {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    box-sizing: border-box;
+    padding: 30px;
+    margin-top: 55px;
+    .left {
+      width: 100%;
+      .video {
+        width: 100%;
+        background: #aaa;
+        position: relative;
+        padding-bottom: 27.65%;
+
+        iframe {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+        }
+      }
+      .desc {
+        display: flex;
+        flex-wrap: wrap;
+        margin-top: 20px;
+        width: 100%;
+        //   height: 100px;
+        //   background: #f5f5f5;
+        > .title {
+          width: 100%;
+          margin-bottom: 15px;
+        }
+        > .channel {
+          font-size: 12px;
+          opacity: 0.7;
+          width: 70%;
+        }
+        > .count {
+          width: 30%;
+          text-align: right;
+          padding-right: 5px;
+          > .Like {
+            margin-left: 20px;
+          }
+        }
+        > .tag {
+          font-size: 13px;
+          margin-top: 15px;
+          width: fit-content;
+          color: #8592ff;
+          margin-bottom: 10px;
+          > span {
+            padding: 0 10px;
+            &:nth-of-type(1) {
+              padding-left: 0;
+            }
+          }
+        }
+      }
+    }
+    .right {
+      width: 100%;
+      margin-top: 50px;
+      height: auto;
+      border-top: 1px solid #666;
+      padding-top: 30px;
+
+      &::-webkit-scrollbar {
+        width: 10px;
+      }
+      &::-webkit-scrollbar-thumb {
+        background-color: #2f3542;
+        border-radius: 10px;
+        &:hover {
+          background-color: #4b5463;
+        }
+      }
+
+      &::-webkit-scrollbar-track {
+        background-color: rgba(128, 128, 128, 0);
+        border-radius: 10px;
+        box-shadow: inset 0px 0px 5px rgba(255, 255, 255, 0.15);
+      }
+    }
+    .Viewside {
+      .videos__inner {
+        display: flex;
+        width: fit-content;
+        gap: 5px;
+        overflow: hidden;
+        flex-wrap: nowrap;
+        &::-webkit-scrollbar {
+          width: 10px;
+          height: 5px;
+        }
+        &::-webkit-scrollbar-thumb {
+          background-color: #2f3542;
+          border-radius: 10px;
+          &:hover {
+            background-color: #4b5463;
+          }
+        }
+
+        &::-webkit-scrollbar-track {
+          background-color: rgba(128, 128, 128, 0);
+          border-radius: 10px;
+          box-shadow: inset 0px 0px 5px rgba(255, 255, 255, 0.15);
+        }
+        .box {
+          width: 300px;
+          margin: 0 auto;
+          height: 300px;
+          position: relative;
+          > a {
+            display: block;
+            width: 48%;
+            height: 100%;
+            background: #fff;
+            border-radius: 15px;
+          }
+          > .boxInfo {
+            position: absolute;
+            bottom: 10%;
+            left: 50%;
+            transform: translate(-50%, -0%);
+            background: rgba(0, 0, 0, 0.7);
+            z-index: 2;
+            border-radius: 10px;
+            padding: 10px;
+            text-align: center;
+            display: block;
+            opacity: 0;
+            transition: opacity 0.3s ease;
+            width: 95%;
+          }
+          &:hover {
+            .boxInfo {
+              opacity: 1;
+            }
+          }
+          &:hover {
+            box-shadow: inset 0px 0px 3px 0px #f5f5f5;
+            border-radius: 10px;
+            padding: 5px;
+            transition: all 0.3s ease;
+          }
+        }
+      }
+    }
   }
 }
+@media (max-width: 500px) {
+  .box {
+    width: 220px !important;
+    height: 220px !important;
+  }
+}
+// @media (max-width: 800px) {
+//   .videos__inner > div {
+//     width: 98% !important;
+//     margin: 0 auto !important;
+//     height: 400px;
+//   }
+//   .videos__inner > div .boxInfo > a:first-child {
+//     height: 50%;
+//   }
+// }
